# vdm-vscode-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  daemon.c  daemon.h  daemon.py  inotify_lookup.c  inotify_lookup.h  package.json  test.c  vscode_plugin.c  vscode_plugin.py
.github/workflows/: auto-release.yml
inotify-hook/: .gitignore  .main.o.d  CMakeLists.txt  Kbuild  Makefile  entry.c  main.c  main.h  netlink_comm.c  netlink_comm.h
inotify-hook/khook/: engine.c
